# splunk-otel-cpp

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  SplunkOpenTelemetryConfig.cmake.in  build_deps.sh  conanfile.py
.github/workflows/: package.yml  package_linux.yml  testbuild.yml
docker/: alpine.Dockerfile  build_splunk_distro  docker-compose.yml
examples/: http_client.cpp  http_common.h  http_server.cpp  simple.cpp
httpd/config/: opentelemetry.conf  opentelemetry.load
include/splunk/: opentelemetry.h
internal/httpd/: create-debs.sh
internal/httpd/packaging/: Dockerfile  common.sh  create-deb.sh  postinstall.sh  prerm.sh
src/: opentelemetry.cpp  splunk_config.h.in
test/: CMakeLists.txt  docker-compose.yml
test/cases/: test_empty_config.cpp  test_env_config.cpp  test_example_config.cpp  test_jaeger_thrift_http.cpp
test/collector/: conf.yml
test/common/: verify.cpp  verify.h
